# CPP_Learing_cherno

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.py
src/: main.cpp
